WSL2/online-boutique-gitops/k8s/security/kyverno/require-app-label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  rules:
  - name: require-app-label
    match:
      any:
      - resources:
          kinds:
          - Deployment
    validate:
      message: "Deployment must have an app label"
      pattern:
        metadata:
          labels:
            app: "?*"
