WSL2/online-boutique-gitops/k8s/security/kyverno/require-run-as-non-root.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
spec:
  validationFailureAction: Enforce
  rules:
  - name: require-run-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Containers must not run as root"
      pattern:
        spec:
          containers:
          - name: "*"
            securityContext:
              runAsNonRoot: true
